--- a/laravel_vue_quiz/package.json
+++ b/laravel_vue_quiz/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-router": "^3.1.3",
     "vue-social-sharing": "^2.4.7",
     "vue-template-compiler": "^2.6.11"
   }
