--- a/laravel_vue_quiz/package.json
+++ b/laravel_vue_quiz/package.json
@@ -21,6 +21,7 @@
     "browser-sync-webpack-plugin": "^2.0.1",
     "chart.js": "^2.9.3",
     "cross-env": "^6.0.3",
+    "jquery": "^3.4.1",
     "laravel-mix": "^5.0.0",
     "node-sass": "^4.13.0",
     "resolve-url-loader": "^3.1.0",
